<resources>
    <string name="app_name">S01E03</string>

    <!-- Strings related to login -->
    <string name="prompt_store">Store</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_back">找回密码</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">没有更多数据.</string>
    <string name="unlogin">未登录</string>
    <string name="unlogin_tip">您还未登录\r\n点击屏幕登录</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="main_menu_login">登录</string>
    <string name="main_menu_logout">注销</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_software">开源软件</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_post">发表</string>
    <string name="main_menu_today">每日一句</string>
    <string name="main_menu_more">更多</string>
    <string name="main_menu_send">提交</string>
    <string name="main_menu_sweep">扫一扫</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">设置</string>
    <string name="main_menu_exit">退出应用</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录.</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="actionbar_title_news">资讯</string>
    <string name="actionbar_title_blog">博客</string>
    <string name="actionbar_title_software">软件</string>
    <string name="actionbar_title_question">帖子</string>
    <string name="actionbar_title_tweet">动弹</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="tip_logout_success">注销成功.</string>
    <string name="tab_name_article">资讯</string>
    <string name="tab_name_question">问答</string>
    <string name="tab_name_tweet">动弹</string>
    <string name="tab_name_me">我</string>

    <string name="tip_click_back_again_to_exist">再按一次退出哎嘛</string>

    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>

    <string name="frame_title_news_lastest">最新资讯</string>
    <string name="frame_title_news_blog">最新博客</string>
    <string name="frame_title_news_recommend">推荐阅读</string>
    <string name="frame_title_question_ask">问答</string>
    <string name="frame_title_question_share">分享</string>
    <string name="frame_title_question_other">综合</string>
    <string name="frame_title_question_job">职业</string>
    <string name="frame_title_question_site">站务</string>
    <string name="frame_title_tweet_lastest">最新动弹</string>
    <string name="frame_title_tweet_hot">热门动弹</string>
    <string name="frame_title_tweet_my">我的动弹</string>
    <string name="frame_title_tweet_send">动弹一下</string>
    <string name="frame_title_active_lastest">最新动态</string>
    <string name="frame_title_active_atme">\@我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>
    <string name="frame_title_friend_following">关注</string>
    <string name="frame_title_friend_follower">粉丝</string>
    <string name="frame_title_favorite_software">软件</string>
    <string name="frame_title_favorite_post">话题</string>
    <string name="frame_title_favorite_code">代码</string>
    <string name="frame_title_favorite_blog">博客</string>
    <string name="frame_title_favorite_news">资讯</string>

    <string name="comment_count">评论:%s</string>
</resources>
